<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mambaTitle"
        android:layout_width="213dp"
        android:layout_height="84dp"
        android:ems="10"

        android:text="@string/login_mamba_title"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/loginEmailInput"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:id="@+id/loginGreetingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_greeting_message"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/loginEmailInput"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mambaTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/loginEmailInput"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="332dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput" />


    <Button
        android:id="@+id/loginBtn"
        android:enabled="true"
        android:text="@string/btn_sign_in"

        android:layout_width="264dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/registerMessage02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_message_02"

        android:textColor="@color/fontColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintLeft_toRightOf="@id/registerMessage01"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/registerMessage01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_message_01"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintVertical_bias="0.121" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput"
        app:layout_constraintVertical_bias="0.148" />


</androidx.constraintlayout.widget.ConstraintLayout>